# CpuRamBenchmark

./: CMakeLists.txt
include/: cpu_bench.h  ram_bench.h
sh/: optimal_cpu_load.bash  optimal_mem_load  stop_loaders
src/: cpu_bench.cpp  main.cpp  ram_bench.cpp
